# fluvio_grpc_server

./: Cargo.toml  build.rs
.github/workflows/: release.yml
proto/: fluvio_grpc.proto
src/: main.rs
src/config/: config.toml  load.rs  mod.rs
src/handlers/: mod.rs
src/proto/: mod.rs
src/services/: fluvio_server.rs  mod.rs
