[package]
name = "fluvio_grpc_server"
version = "0.1.0"
edition = "2024"

[dependencies]
fluvio = "0.26.2"
config = "0.15.11"
tokio = { version = "1.44.2", features = ["full"] }
tonic = "0.13.0"
prost = "0.13.5"
prost-types = "0.13.5"
futures = "0.3.31"
tokio-stream = "0.1.17"
console = "0.15.8"
figlet-rs = "0.1.5"
unicode-width = "0.1.11"
anyhow = "1.0.98"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

futures-core = "0.3"

[build-dependencies]
tonic-build = "0.13"